<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FRP-BC</string>
    <string name="app_label">FRP-BC</string>
    <string name="facebook_page">Facebook Page</string>
    <string name="twitter_page">Twitter Page</string><string name="details_name">Details</string><string name="contactus_name">Contact Us</string><string name="search_hint">Search FRPs</string>
    
    
    <string name="action_contactus">Contact Us</string>
    
    
    <string name="action_email">Email</string><string name="action_list">Show as list</string><string name="action_map">Show as map</string><string name="action_poi_favorite">Save</string>
    <string name="action_poi_share">Share</string>
    <string name="action_poi_call">Call</string>
    <string name="action_poi_email">Email</string><string name="action_poi_directions">Route</string><string name="action_poi_website">Website</string><string name="action_search">Search</string><string name="action_settings">Settings</string><string name="action_undo_search">Clear search</string>
    <string name="dialog_fail_to_start_body">FRP-BC is incompatible with your device.</string><string name="dialog_fail_to_start_close">Close</string><string name="dialog_fail_to_start_title">Error</string>
    <string name="accreditation_title">FRP Standards Certification Complete:</string>
    <string name="programs_title">Programs:</string>
    <string name="hours_title">Hours:</string>
    
    
    
    
    

</resources>
